# firstmcpserver

./: README.md  pyproject.toml
src/mcp_server_example/: __main__.py  deployment.py
